91: write method with naive randomization